# pykinectome

./: .gitignore  clustering_coef_routine.py  main.py  patterns_tests.py  pyproject.toml  top_centrality.py
src/: centrality.py  fingerprint.py  kinectome.py  kinectome_characteristics.py  modularity.py  patterns.py  time_lag.py
src/data_utils/: data_loader.py  groups.py  kinecome2graph.py  permutation.py  plotting.py  select_subjects.py
src/graph_utils/: kinectome2graph.py  kinectome2pattern.py
src/preprocessing/: align.py  differentiation.py  filter.py  interpolate.py  preprocessing.py  trim_data.py
src/visualization/: first_test.py
